# nyc_taxi_fare_prediction

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  render.yaml
.dvc/: config
data/03_final/: final_df.csv.dvc
inference/: geocode_address.py  predict.py  predict_using_address.py  prepare_features.py  render.yaml
models/: model.pkl  preprocessor.pkl
notebooks/: 00_eda.ipynb  01_preprocessing.ipynb  eda.ipynb  eda_preprocessing.ipynb  modelling.ipynb
src/: config.py  constants.py  load_data.py  logging_config.py  preprocess.py  preprocessing.py  run_experiment.py  train_model.py
src/nyc_tfp/: config.py  evaluate_model.py  load_data.py  preprocess.py  train_model.py
src/utils/: helpers.py  load_dataset.py  logging_config.py  results_visuals.py  visualize_results.py
tests/: conftest.py  integration_test.py  test_load_dataset.py  test_preprocessing.py
