[project]
name = "nyc-tfp"
version = "0.1.0"
description = ""
authors = [
    {name = "Napsugar Kelemen",email = "napsugar.kelemen@qubiz.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pmdarima (>=2.0.4,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "shap (>=0.47.2,<0.48.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

